--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rocket = { git = "https://github.com/SergioBenitez/Rocket", features = ["secrets"] }
+rocket = { git = "https://github.com/SergioBenitez/Rocket", features = ["secrets", "json"] }
 rocket_db_pools = { git = "https://github.com/SergioBenitez/Rocket", features = ["sqlx_postgres"] }
 rocket_dyn_templates = { git = "https://github.com/SergioBenitez/Rocket", features = ["tera"] }
 fluent-templates = { version = "0.6", features = ["tera"] }
@@ -14,7 +14,7 @@ accept-language = "2.0"
 lettre = { version = "0.10.0-rc.1", features = ["builder", "tokio1-native-tls"] }
 anyhow = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-sqlx = { version = "0.5", features = ["postgres"] }
+sqlx = { version = "0.5", features = ["postgres", "chrono"] }
 tera = "1"
 lazy_static = "1"
 argon2 = "0.3"
@@ -23,3 +23,4 @@ chrono = { version = "0.4", features = ["serde"] }
 serde_json = "1"
 lazy-regex = "2"
 derive_deref = "1"
+itertools = "0.10"
