--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,12 @@ edition = "2021"
 opt-level = 3
 
 [dependencies]
-rocket = { git = "https://github.com/SergioBenitez/Rocket", features = ["secrets", "json"] }
-rocket_db_pools = { git = "https://github.com/SergioBenitez/Rocket", features = ["sqlx_postgres"] }
-rocket_dyn_templates = { git = "https://github.com/SergioBenitez/Rocket", features = ["tera"] }
+# rocket = { git = "https://github.com/SergioBenitez/Rocket", features = ["secrets", "json"] }
+# rocket_db_pools = { git = "https://github.com/SergioBenitez/Rocket", features = ["sqlx_postgres"] }
+# rocket_dyn_templates = { git = "https://github.com/SergioBenitez/Rocket", features = ["tera"] }
+rocket = { version = "0.5.0-rc.2", features = ["secrets", "json"] }
+rocket_db_pools = { version = "0.1.0-rc.2", features = ["sqlx_postgres"] }
+rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
 fluent-templates = { version = "0.6", features = ["tera"] }
 accept-language = "2.0"
 lettre = { version = "0.10.0-rc.4", features = ["builder", "tokio1-native-tls"] }
