--- a/Rocket.toml
+++ b/Rocket.toml
@@ -6,6 +6,7 @@ web_address = "http://localhost:8000"
 secret_key = "UZ/Q8SFljW9D7BQbTyIFWaYCZ4JOHczt7XMgdYXwJLk="
 dates_per_day = 3
 days_deadline = 1
+impressum = ""
 
 [default.databases.database]
 url = "postgres://audition_dates:shouldbesecret@localhost/audition_dates"
