--- a/Rocket.toml
+++ b/Rocket.toml
@@ -8,6 +8,7 @@ dates_per_day = 3
 days_deadline = 1
 impressum = ""
 enabled_date_types = ["choir"]
+application_deadlines = {}
 
 [default.databases.database]
 url = "postgres://audition_dates:shouldbesecret@localhost/audition_dates"
