--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,13 +9,13 @@ edition = "2021"
 opt-level = 3
 
 [dependencies]
-rocket = { version = "0.5.0-rc.2", features = ["secrets", "json"] }
-rocket_db_pools = { version = "0.1.0-rc.2", features = ["sqlx_postgres"] }
-sqlx = { version = "0.5", features = ["postgres", "chrono", "offline", "migrate", "runtime-tokio-rustls"] }  # should be matched with rocket_db_pools
-rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
+rocket = { version = "0.5.0-rc.3", features = ["secrets", "json"] }
+rocket_db_pools = { version = "0.1.0-rc.3", features = ["sqlx_postgres"] }
+sqlx = { version = "0.6", features = ["postgres", "chrono", "offline", "migrate", "runtime-tokio-rustls"] }  # should be matched with rocket_db_pools
+rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["tera"] }
 fluent-templates = { version = "0.8", features = ["tera"] }
 accept-language = "2.0"
-lettre = { version = "0.10.0-rc.4", features = ["builder", "tokio1-native-tls"] }
+lettre = { version = "0.10", features = ["builder", "tokio1-native-tls"] }
 anyhow = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tera = "1"
